samples/_failures_safe/1761621746_1e17b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1c5c39b.c: In function ‘main’:
./samples/SAFE/__tmp_d1c5c39b.c:131:5: error: expected expression at end of input
  131 |     add_log_entry(&analyzer, "2024-01-15 10:35:23",
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d1c5c39b.c:131:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_d1c5c39b.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d1c5c39b.c:131:5: error: expected declaration or statement at end of input
  131 |     add_log_entry(&analyzer, "2024-01-15 10:35:23",
      |     ^~~~~~~~~~~~~
